Modify Header for Planning Screen

--- a/client/src/assets/scss/planning.scss
+++ b/client/src/assets/scss/planning.scss
@@ -1,3 +1,122 @@
 .planning{
     height: 100vh;
+    .planning_btm{
+        .planning_header{
+            display: flex;
+            .left-content{
+                font-weight: bold;
+                padding: 10px 10px 10px 10px;
+                margin-left: 5px;
+            }
+            .right-content{
+                padding: 10px 10px 10px 10px;
+                margin-left: 74%;
+                .paginate{
+                    gap: 10px;
+                    display: flex;
+                    .pl-label{
+                        
+                      display: inline-block;
+                    }
+                    .switch{
+                        margin-top: 2px;
+                        position: relative;
+                        display: inline-block;
+                        width: 40px;
+                        height: 20px;
+                        margin-left: 2px;
+                        input{
+                            opacity: 0;
+                            width: 0;
+                            height: 0;
+                            &:checked + .slider{
+                            background-color: #2196F3;
+                            }
+                            &:focus + .slider{
+                            box-shadow: 0 0 1px #2196F3;
+                            }
+                            &:checked + .slider:before{
+                            transform: translateX(20px);
+                            }
+                        }
+                        .slider{
+                            position: absolute;
+                            cursor: pointer;
+                            height: 21px;
+                            top: 0;
+                            left: 0;
+                            right: 0;
+                            bottom: 0;
+                            background-color: #ccc;
+                            border-radius: 10px;
+                            transition: background-color 0.4s;
+                            &:before{
+                            position: absolute;
+                            content: "";
+                            height: 16px;
+                            width: 16px;
+                            left: 2px;
+                            bottom: 2px;
+                            background-color: #fff;
+                            border-radius: 50%;
+                            transition: transform 0.4s;
+                            }
+                        }
+                    }
+                    .total-page{
+                      display: inline-block;
+                      margin-left: 10px;
+                    }
+                    .pagination{
+                      display: inline-flex;
+                      align-items: center;
+                      margin-left: 20px;
+                      button, select{
+                        padding: 5px 10px;
+                        margin: 0;
+                        border: 1px solid #ccc;
+                        background-color: #f2f2f2;
+                        cursor: pointer;
+                        height: 32px;
+                        &:first-child{
+                          border-top-left-radius: 5px;
+                          border-bottom-left-radius: 5px;
+                        }
+                        &:last-child{
+                          border-top-right-radius: 5px;
+                          border-bottom-right-radius: 5px;
+                        }
+                        &:hover{
+                          background-color: #f9f9f9;
+                        }
+                        &:disabled{
+                          background-color: #e0e0e0; 
+                          color: #000;
+                          cursor: not-allowed;
+                        }
+                        &:not(:disabled):active,
+                        &:not(:disabled):focus{
+                          background-color: #f9f9f9;
+                          color: #000;
+                        }
+                      }
+                      select{
+                        border-top-left-radius: 0; 
+                        border-bottom-left-radius: 0; 
+                        border-top-right-radius: 5px; 
+                        border-bottom-right-radius: 5px; 
+                        margin-left: -1px; 
+                        &:hover,
+                        &:focus,
+                        &:active {
+                          background-color: #f2f2f2 !important; 
+                          border-color: #ccc !important; 
+                          color: #000 !important;
+                        }
+                      }
+                    }
+                  }
+            }
+        }
+    }
 }
