done modify the table and applied on/off function

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -17,5 +17,5 @@
 @import './personnelExpenseCreate.scss';
 @import './notFound.scss';
 @import './planning.scss';
-
+@import './tablePlanning.scss';
 
