--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -17,6 +17,6 @@
 @import './personnelExpenseCreate.scss';
 @import './notFound.scss';
 @import './planning.scss';
+@import './tablePlanning.scss';
 @import './costofSalesRegistration.scss';
-
 
