--- a/client/src/assets/scss/planning.scss
+++ b/client/src/assets/scss/planning.scss
@@ -1,3 +1,158 @@
-.planning{
-    height: 100vh;
+.planning_wrapper {
+  width: 100%;
+  height: 97vh;
+  padding: 10px 30px 10px 30px;
+
+  .plan_top_cont {
+    border: 1px solid #fff;
+    border-radius: 5px;
+    background-color: #fff;
+
+    .planning {
+      // height: 100vh;
+
+      .planning_btm {
+        .planning_header {
+          display: flex;
+          width: 100%;
+
+          .left-content {
+            font-weight: bold;
+            padding: 10px 10px 10px 10px;
+            margin-left: 5px;
+          }
+
+          .right-content {
+            padding: 10px 10px 10px 10px;
+            margin-left: 74%;
+
+            .paginate {
+              gap: 10px;
+              display: flex;
+
+              .pl-label {
+                display: inline-block;
+              }
+
+              .switch {
+                margin-top: 2px;
+                position: relative;
+                display: inline-block;
+                width: 40px;
+                height: 20px;
+                margin-left: 2px;
+
+                input {
+                  opacity: 0;
+                  width: 0;
+                  height: 0;
+
+                  &:checked + .slider {
+                    background-color: #2196F3;
+                  }
+
+                  &:focus + .slider {
+                    box-shadow: 0 0 1px #2196F3;
+                  }
+
+                  &:checked + .slider:before {
+                    transform: translateX(20px);
+                  }
+                }
+
+                .slider {
+                  position: absolute;
+                  cursor: pointer;
+                  height: 21px;
+                  top: 0;
+                  left: 0;
+                  right: 0;
+                  bottom: 0;
+                  background-color: #ccc;
+                  border-radius: 10px;
+                  transition: background-color 0.4s;
+
+                  &:before {
+                    position: absolute;
+                    content: "";
+                    height: 16px;
+                    width: 16px;
+                    left: 2px;
+                    bottom: 2px;
+                    background-color: #fff;
+                    border-radius: 50%;
+                    transition: transform 0.4s;
+                  }
+                }
+              }
+            }
+          }
+        }
+
+        .planning_tbl_cont {
+          // height: 77vh;
+
+          .table_content_planning {
+            // display: none;
+          }
+
+          .hidden {
+            display: none;
+          }
+
+          .table_content_props {
+            height: 82vh;
+
+            .planning_scrollable {
+              max-height: 80vh;
+            }
+          }
+
+          table {
+            border-collapse: collapse;
+            width: 100%;
+
+            thead {
+              th {
+                border: 1px solid #ccc;
+                padding: 8px;
+                text-align: left;
+
+                &:first-child {
+                  border-left: none;
+                }
+
+                &:last-child {
+                  border-right: none;
+                }
+              }
+            }
+
+            tbody {
+              tr {
+                border-bottom: 1px solid #ccc;
+
+                // &:nth-child(odd) {
+                //   background-color: #f9f9f9;
+                // }
+
+                &:hover {
+                  background-color: #f1f1f1;
+                }
+
+                td {
+                  border-left: 1px solid #ccc;
+                  padding: 8px;
+
+                  &:first-child {
+                    border-left: none;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
