--- a/client/src/assets/scss/projectDataCreate.scss
+++ b/client/src/assets/scss/projectDataCreate.scss
@@ -177,7 +177,7 @@
                                     .start_yyyymm{
                                         margin-bottom: 5px;
                                     }
-                                    input{
+                                    .select-option{
                                         width: 80%;
                                         height: 40px;
                                         border: 1px solid #000;
@@ -190,7 +190,7 @@
                                     .end_yyyymm{
                                         margin-bottom: 5px;
                                     }
-                                    input{
+                                    .select-option{
                                         width: 80%;
                                         height: 40px;
                                         border: 1px solid #000;
