--- a/client/src/assets/scss/projectDataList.scss
+++ b/client/src/assets/scss/projectDataList.scss
@@ -66,7 +66,7 @@
                                 margin-left: 5%;
                                 display: flex;
                                 gap: 2%;
-                                .proj_btn{
+                                .body-btn{
                                     margin-top: 15px;
                                     border: 1px solid #808080;
                                     width: 10rem;
@@ -74,12 +74,12 @@
                                     border-radius: 5px !important;
                                     background-color: #fff;
                                     color: #000;
-                                    &:hover{
-                                        background-color: #808080;
-                                        color: #fff;
-                                    }
                                 }
-                                .proj_btn.active{
+                                .body-btn:hover{
+                                    background-color: #808080;
+                                    color: #fff;
+                                }
+                                .body-btn-active{
                                     background-color: #808080;
                                     color: #fff;
                                 }
