Modified FE for retrieving dynamic data in table

--- a/client/src/assets/scss/tablePlanning.scss
+++ b/client/src/assets/scss/tablePlanning.scss
@@ -19,6 +19,7 @@
           font-size: 10px;
           &.indented-label {
             text-align: right;
+            font-size: 10px;
             font-weight: bold;
           }
           &.no-indent {
