--- a/client/src/assets/scss/projectDataCreate.scss
+++ b/client/src/assets/scss/projectDataCreate.scss
@@ -170,33 +170,6 @@
                                         border-radius: 10px;
                                     }
                                 }
-                                .start_date-div{ 
-                                    display: flex;
-                                    flex-direction: column;
-                                    margin-bottom: 10px;
-                                    .start_yyyymm{
-                                        margin-bottom: 5px;
-                                    }
-                                    input{
-                                        width: 80%;
-                                        height: 40px;
-                                        border: 1px solid #000;
-                                        border-radius: 10px;
-                                    }
-                                }
-                                .end_date-div{ 
-                                    display: flex;
-                                    flex-direction: column;
-                                    .end_yyyymm{
-                                        margin-bottom: 5px;
-                                    }
-                                    input{
-                                        width: 80%;
-                                        height: 40px;
-                                        border: 1px solid #000;
-                                        border-radius: 10px;
-                                    }
-                                }
                             }
                             .middle-form-div{
                                 .net-sales-div{ 
@@ -218,79 +191,17 @@
                                     margin: 0;
                                     }
                                 }
-                                .cost-of-sales-div{ 
+                                .end_date-div{ 
                                     display: flex;
                                     flex-direction: column;
-                                    margin-bottom: 10px;
-                                    .cost_of_goods_sold{
+                                    .end_yyyymm{
                                         margin-bottom: 5px;
                                     }
-                                    input{
+                                    .select-option{
                                         width: 80%;
                                         height: 40px;
                                         border: 1px solid #000;
                                         border-radius: 10px;
-                                    }
-                                    input::-webkit-outer-spin-button,
-                                    input::-webkit-inner-spin-button {
-                                    -webkit-appearance: none;
-                                    margin: 0;
-                                    }
-                                }
-                                .personnel-expenses-div{ 
-                                    display: flex;
-                                    flex-direction: column;
-                                    margin-bottom: 10px;
-                                    .personnel_expenses{
-                                        margin-bottom: 5px;
-                                    }
-                                    input{
-                                        width: 80%;
-                                        height: 40px;
-                                        border: 1px solid #000;
-                                        border-radius: 10px;
-                                    }
-                                    input::-webkit-outer-spin-button,
-                                    input::-webkit-inner-spin-button {
-                                    -webkit-appearance: none;
-                                    margin: 0;
-                                    }
-                                }
-                                .indirect-personnel-cost-div{ 
-                                    display: flex;
-                                    flex-direction: column;
-                                    margin-bottom: 10px;
-                                    .indirect_personnel_cost{
-                                        margin-bottom: 5px;
-                                    }
-                                    input{
-                                        width: 80%;
-                                        height: 40px;
-                                        border: 1px solid #000;
-                                        border-radius: 10px;
-                                    }
-                                    input::-webkit-outer-spin-button,
-                                    input::-webkit-inner-spin-button {
-                                    -webkit-appearance: none;
-                                    margin: 0;
-                                    }
-                                }
-                                .expenses-div{ 
-                                    display: flex;
-                                    flex-direction: column;
-                                    .expenses{
-                                        margin-bottom: 5px;
-                                    }
-                                    input{
-                                        width: 80%;
-                                        height: 40px;
-                                        border: 1px solid #000;
-                                        border-radius: 10px;
-                                    }
-                                    input::-webkit-outer-spin-button,
-                                    input::-webkit-inner-spin-button {
-                                    -webkit-appearance: none;
-                                    margin: 0;
                                     }
                                 }
                             }
@@ -319,43 +230,6 @@
                                     flex-direction: column;
                                     margin-bottom: 10px;
                                     .operating_income{
-                                        margin-bottom: 5px;
-                                    }
-                                    input{
-                                        width: 80%;
-                                        height: 40px;
-                                        border: 1px solid #000;
-                                        border-radius: 10px;
-                                    }
-                                    input::-webkit-outer-spin-button,
-                                    input::-webkit-inner-spin-button {
-                                    -webkit-appearance: none;
-                                    margin: 0;
-                                    }
-                                }
-                                .ordinary-income-div{ 
-                                    display: flex;
-                                    flex-direction: column;
-                                    margin-bottom: 10px;
-                                    .ordinary_income{
-                                        margin-bottom: 5px;
-                                    }
-                                    input{
-                                        width: 80%;
-                                        height: 40px;
-                                        border: 1px solid #000;
-                                        border-radius: 10px;
-                                    }
-                                    input::-webkit-outer-spin-button,
-                                    input::-webkit-inner-spin-button {
-                                    -webkit-appearance: none;
-                                    margin: 0;
-                                    }
-                                }
-                                .ordinary-income-margin-div{ 
-                                    display: flex;
-                                    flex-direction: column;
-                                    .ordinary_income_margin{
                                         margin-bottom: 5px;
                                     }
                                     input{
