--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -19,4 +19,5 @@
 @import './planning.scss';
 @import './tablePlanning.scss';
 @import './costofSalesRegistration.scss';
+@import './expensesRegistration.scss';
 
