Done modifying the personnel table

--- a/client/src/assets/scss/personnelExpensesList.scss
+++ b/client/src/assets/scss/personnelExpensesList.scss
@@ -171,26 +171,56 @@
                                             }
                                             .txt0{
                                                 margin-bottom: 5px;
+                                                text-align: center;
+                                                // font-size: 14px;
                                             }
-                                            .txt1{
-                                                font-size: 14px;
-                                                padding: 5px 0px;
-                                                background-color: #C6D4E7;
-                                                color: #000;
-                                                border-radius: 5px;
+                                            .txt1_txt2_flex{
+                                                margin-top: 20px;
+                                                display: flex;
+                                                // justify-content: space-between;
+                                                width: 100%;
+                                                .txt1{
+                                                    font-size: 12px;
+                                                    padding: 5px 0px;
+                                                    background-color: #C6D4E7;
+                                                    color: #000;
+                                                    border-radius: 5px;
+                                                    text-align: center;
+                                                    width: 100% !important;
+                                                    @media only screen and (max-width: 1875px){
+                                                        font-size: 10px;
+                                                    }
+                                                }
+                                                .txt2{
+                                                    margin-left: 5px;
+                                                    font-size: 12px;
+                                                    padding: 5px 0px;
+                                                    text-align: center;
+                                                }
                                             }
-                                            .txt2{
-                                                margin-left: 5px;
-                                                font-size: 14px;
-                                                padding: 5px 0px;
-                                            }
-                                            .txt3{
-                                                margin-left: 5px;
-                                                font-size: 14px;
-                                                padding: 5px 0px;
-                                                background-color: #C6D4E7;
-                                                color: #000;
-                                                border-radius: 5px;
+                                            .txt3_txt4_flex{
+                                                margin-top: 30px;
+                                                display: flex;
+                                                // justify-content: space-between;
+                                                width: 100%;
+                                                .txt3{
+                                                    font-size: 12px;
+                                                    padding: 5px 0px;
+                                                    background-color: #C6D4E7;
+                                                    color: #000;
+                                                    border-radius: 5px;
+                                                    text-align: center;
+                                                    width: 100% !important;
+                                                    @media only screen and (max-width: 1875px){
+                                                        font-size: 10px;
+                                                    }
+                                                }
+                                                .txt4{
+                                                    margin-left: 5px;
+                                                    font-size: 12px;
+                                                    padding: 5px 0px;
+                                                    text-align: center;
+                                                }
                                             }
                                         }
                                     }
