--- a/client/src/assets/scss/personnelExpensesList.scss
+++ b/client/src/assets/scss/personnelExpensesList.scss
@@ -125,29 +125,31 @@
                             }
                             .personnel_table_wrapper{
                                 width: 100%;
-                                max-height: 430px;
+                                height: 50vh;
                                 overflow-y: auto; 
                                 overflow-x: hidden;
-                                scrollbar-width: thin;
-                                scrollbar-color: #888 #f1f1f1;
+                                scrollbar-width: none;
+                                @media only screen and (min-width: 1875px){
+                                    height: 55vh;
+                                }
                             
                                 &::-webkit-scrollbar {
-                                    width: 5px;
-                                    height: 5px;
+                                    width: 0;
+                                    height: 0;
                                 }
                             
                                 &::-webkit-scrollbar-track {
-                                    background: #f1f1f1;
+                                    background: transparent;
                                 }
                             
                                 &::-webkit-scrollbar-thumb {
-                                    background-color: #888;
-                                    border-radius: 10px;
-                                    border: 1px solid #f1f1f1;
+                                    background-color: transparent;
+                                    border-radius: 0;
+                                    border: none;
                                 }
                             
                                 &::-webkit-scrollbar-thumb:hover {
-                                    background-color: #555;
+                                    background-color: transparent;
                                 }
                                 .personnel_table_cont{
                                     padding: 0px 0px 0px 70px;
