--- a/client/src/assets/scss/planning.scss
+++ b/client/src/assets/scss/planning.scss
@@ -2,6 +2,9 @@
   width: 86%;
   height: 97vh;
   padding: 10px 30px 10px 30px;
+  @media only screen and (min-width: 1875px){
+    width: 89%;
+  }
 
   .plan_top_cont {
     border: 1px solid #fff;
@@ -114,7 +117,7 @@
             // border-collapse: collapse;
             width: 93%;
             @media only screen and (min-width: 1875px){
-              width: 91%;
+              width: 95%;
             }
             thead {
               th {
