--- a/client/src/assets/scss/table.scss
+++ b/client/src/assets/scss/table.scss
@@ -70,25 +70,25 @@ td.td_first {
     max-height: 500px; /* Set the maximum height of the container */
     overflow-y: auto; /* Enable vertical scrolling */
     scrollbar-width: thin;
-    scrollbar-color: #888 #f1f1f1;
+    scrollbar-width: none;
 }
 .scrollable_container::-webkit-scrollbar {
-    width: 5px;
-    height: 5px;
+    width: 0;
+    height: 0;
 }
 
 .scrollable_container::-webkit-scrollbar-track {
-    background: #f1f1f1;
+    background: transparent;
 }
 
 .scrollable_container::-webkit-scrollbar-thumb {
-    background-color: #888;
-    border-radius: 10px;
-    border: 1px solid #f1f1f1;
+    background-color: transparent;
+    border-radius: 0;
+    border: none;
 }
 
 .scrollable_container::-webkit-scrollbar-thumb:hover {
-    background-color: #555;
+    background-color: transparent;
 }
 
 .td_no {
