Done fixing month values in all registration screens

--- a/client/src/assets/scss/projectDataCreate.scss
+++ b/client/src/assets/scss/projectDataCreate.scss
@@ -140,6 +140,9 @@
                                         height: 40px;
                                         border: 1px solid #000;
                                         border-radius: 10px;
+                                        option{
+                                            text-align: left;
+                                        }
                                     }
                                 }
                                 .business_division_name-div{
