--- a/client/src/assets/scss/planning.scss
+++ b/client/src/assets/scss/planning.scss
@@ -1,7 +1,10 @@
 .planning_wrapper {
-  width: 100%;
+  width: 86%;
   height: 97vh;
   padding: 10px 30px 10px 30px;
+  @media only screen and (min-width: 1875px){
+    width: 89%;
+  }
 
   .plan_top_cont {
     border: 1px solid #fff;
@@ -15,16 +18,18 @@
         .planning_header {
           display: flex;
           width: 100%;
+          justify-content: space-between;
 
           .left-content {
             font-weight: bold;
-            padding: 10px 10px 10px 10px;
-            margin-left: 5px;
+            // padding: 10px 10px 10px 10px;
+            margin-top: 13px;
+            margin-left: 10px;
           }
 
           .right-content {
-            padding: 10px 10px 10px 10px;
-            margin-left: 74%;
+            // padding: 10px 10px 10px 10px;
+            // margin-left: 74%;
 
             .paginate {
               gap: 10px;
@@ -108,10 +113,12 @@
             }
           }
 
-          table {
-            border-collapse: collapse;
-            width: 100%;
-
+          .plan {
+            // border-collapse: collapse;
+            width: 93%;
+            @media only screen and (min-width: 1875px){
+              width: 95%;
+            }
             thead {
               th {
                 border: 1px solid #ccc;
