--- a/client/src/assets/scss/login.scss
+++ b/client/src/assets/scss/login.scss
@@ -115,7 +115,9 @@
               a {
                 color: #7090fe;
                 font-weight: bold;
-                text-decoration: underline;
+                text-decoration: none;
+                font-size: 1.2em; /* Increase the font size */
+                // letter-spacing: 0.5px;
               }
             }
           }
