--- a/client/src/assets/scss/planning.scss
+++ b/client/src/assets/scss/planning.scss
@@ -1,53 +1,41 @@
-.planning_wrapper {
+.planning_wrapper{
   width: 86%;
   height: 97vh;
-  padding: 10px 30px 10px 30px;
+  padding: 10px 10px 10px 10px;
   @media only screen and (min-width: 1875px){
     width: 89%;
   }
-
-  .plan_top_cont {
+  .plan_top_cont{
     border: 1px solid #fff;
     border-radius: 5px;
     background-color: #fff;
-
-    .planning {
-      // height: 100vh;
-
-      .planning_btm {
-        .planning_header {
+    .planning{
+      .planning_btm{
+        .planning_header{
           display: flex;
           width: 100%;
           justify-content: space-between;
-
-          .left-content {
+          .left-content{
             font-weight: bold;
             // padding: 10px 10px 10px 10px;
             margin-top: 13px;
             margin-left: 10px;
           }
-
-          .right-content {
-            // padding: 10px 10px 10px 10px;
-            // margin-left: 74%;
-
-            .paginate {
+          .right-content{
+            .paginate{
               gap: 10px;
               display: flex;
-
-              .pl-label {
+              .pl-label{
                 display: inline-block;
               }
-
-              .switch {
+              .switch{
                 margin-top: 2px;
                 position: relative;
                 display: inline-block;
                 width: 40px;
                 height: 20px;
                 margin-left: 2px;
-
-                input {
+                input{
                   opacity: 0;
                   width: 0;
                   height: 0;
@@ -64,8 +52,7 @@
                     transform: translateX(20px);
                   }
                 }
-
-                .slider {
+                .slider{
                   position: absolute;
                   cursor: pointer;
                   height: 21px;
@@ -93,69 +80,24 @@
             }
           }
         }
-
-        .planning_tbl_cont {
-          // height: 77vh;
-
-          .table_content_planning {
-            // display: none;
+        .planning_tbl_cont{
+          .table_content_planning{
+            .table-planning-container{
+              width: 100% !important;
+              .table-planning{
+                table{
+                  
+                }
+              }
+            }
           }
-
           .hidden {
             display: none;
           }
-
-          .table_content_props {
+          .table_content_props{
             height: 82vh;
-
-            .planning_scrollable {
+            .planning_scrollable{
               max-height: 80vh;
-            }
-          }
-
-          .plan {
-            // border-collapse: collapse;
-            width: 93%;
-            @media only screen and (min-width: 1875px){
-              width: 95%;
-            }
-            thead {
-              th {
-                border: 1px solid #ccc;
-                padding: 8px;
-                text-align: left;
-
-                &:first-child {
-                  border-left: none;
-                }
-
-                &:last-child {
-                  border-right: none;
-                }
-              }
-            }
-
-            tbody {
-              tr {
-                border-bottom: 1px solid #ccc;
-
-                // &:nth-child(odd) {
-                //   background-color: #f9f9f9;
-                // }
-
-                &:hover {
-                  background-color: #f1f1f1;
-                }
-
-                td {
-                  border-left: 1px solid #ccc;
-                  padding: 8px;
-
-                  &:first-child {
-                    border-left: none;
-                  }
-                }
-              }
             }
           }
         }
