--- a/client/src/assets/scss/dashboard.scss
+++ b/client/src/assets/scss/dashboard.scss
@@ -5,29 +5,33 @@
         margin-left: 5%;
         height: 60px;
         display: flex;
-        gap: 2%;
+        justify-content: space-between;
         .header_container{
             background-color: #fff;
             padding: 5px 5px 10px 5px;
             box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
             
         }
-        .header-btn{                        
-            margin-top: 15px;
-            border: 1px solid #808080;
-            width: 10rem;
-            height: 30px;
-            border-radius: 5px !important;
-            background-color: #fff;
-            color: #000;
-        }
-        .header-btn:hover{
-            background-color: #808080;
-            color: #fff;
-        }
-        .h-btn-active{
-            background-color: #808080;
-            color: #fff;
+        .header-buttons{
+            display: flex;
+            gap: 30px;
+            .header-btn{                        
+                margin-top: 15px;
+                border: 1px solid #808080;
+                width: 10rem;
+                height: 30px;
+                border-radius: 5px !important;
+                background-color: #fff;
+                color: #000;
+            }
+            .header-btn:hover{
+                background-color: #808080;
+                color: #fff;
+            }
+            .h-btn-active{
+                background-color: #808080;
+                color: #fff;
+            }
         }
         .hamburger{
             display: none;
@@ -48,6 +52,65 @@
                 display: none;
             }
           }
+          .language-toggle {
+            gap: 10px;
+            display: flex;
+            padding-right: 50px;
+            
+            .pl-label {
+              display: inline-block;
+            }
+            
+            .switch {
+              margin-top: 2px;
+              position: relative;
+              display: inline-block;
+              width: 40px;
+              height: 20px;
+              margin-left: 2px;
+              
+              input {
+                opacity: 0;
+                width: 0;
+                height: 0;
+          
+                &:checked + .slider {
+                  background-color: #2196F3;
+                }
+          
+                &:focus + .slider {
+                  box-shadow: 0 0 1px #2196F3;
+                }
+          
+                &:checked + .slider:before {
+                  transform: translateX(20px);
+                }
+              }
+              
+              .slider {
+                position: absolute;
+                cursor: pointer;
+                height: 20px;  // Adjusted to match the height of the switch
+                width: 40px;   // Should match the width of the switch container
+                background-color: #ccc;
+                border-radius: 10px;
+                transition: background-color 0.4s;
+                
+                &:before {
+                  position: absolute;
+                  content: "";
+                  height: 16px;  // Slightly smaller than the switch height
+                  width: 16px;   // Matches the height of the circle
+                  left: 2px;
+                  bottom: 2px;
+                  background-color: #fff;
+                  border-radius: 50%;
+                  transition: transform 0.4s;
+                }
+              }
+            }
+          }
+          
     }
     .content_wrapper{
         display: flex;
