--- a/client/src/assets/scss/notFound.scss
+++ b/client/src/assets/scss/notFound.scss
@@ -1,3 +1,29 @@
+.personnel_top_btn_cont{
+    margin-left: 5%;
+    display: flex;
+    justify-content: space-between;
+    .header-buttons{
+        display: flex;
+        gap: 30px;
+        .header-btn{                        
+            margin-top: 15px;
+            border: 1px solid #808080;
+            width: 10rem;
+            height: 30px;
+            border-radius: 5px !important;
+            background-color: #fff;
+            color: #000;
+        }
+        .header-btn:hover{
+            background-color: #808080;
+            color: #fff;
+        }
+        .h-btn-active{
+            background-color: #808080;
+            color: #fff;
+        }
+    }
+}
 .not_found{
     margin-top: 200px;
 }
