--- a/client/src/assets/scss/tablePlanning.scss
+++ b/client/src/assets/scss/tablePlanning.scss
@@ -29,10 +29,11 @@
             font-size: 12.6px;
             font-weight: bold;
           }
-         
         }
-        
-  
+        .input_tag{
+          text-align: right;
+          width: 67px;
+        }
         th {
           // background-color: #f2f2f2;
           white-space: nowrap;
